tdf#113758 EMF+ Add support to OffsetClip record

OffsetClip record applies a translation transform
on the current clipping region for the world space.

Change-Id: Iac024a3c2eaba58edc5bb59d817796b6022f559f